# rcore-vmm

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  vmm.c
.github/workflows/: build.yml
dev/: bios.c  dev.h  ide.c  ide.h  io_port.c  io_port.h  lpt.c  lpt.h  ps2.c  serial.c  serial.h  vga.c  vga.h
fake_bios/: CMakeLists.txt  Makefile  asm.h  bios.S  make_idt.py  readme.md  setup_ivt.S
rvloader/: Makefile  linker.ld  main.c
src/: CMakeLists.txt  mem_set.c  mem_set.h  vmm.c
src/arch/: CMakeLists.txt
src/arch/amd64/: CMakeLists.txt  init.c
src/arch/riscv64/: CMakeLists.txt  init.c
src/dev/: CMakeLists.txt  bios.c  bios.h  dev.h  ide.c  ide.h  io_port.c  io_port.h  lpt.c  ps2.c  ps2.h  serial.c  serial.h  vga.c
src/dev/platform/amd64/: CMakeLists.txt  bios.c  ide.c  serial.c
src/dev/platform/riscv64/: serial.c
src/include/: init.h  rvm.h
src/include/arch/amd64/: rvmstruct.h
src/include/arch/riscv64/: rvmstruct.h
src/include/dev/: dev.h
ucore_bios/: CMakeLists.txt  asm.h  bios.ld  make_idt.py  readme.md  setup_ivt.S
